--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,23 @@
 node_modules
 .vtex
 dist
+build
+.cache
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+.DS_Store
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+.vscode
+.idea
+coverage
+.cache-loader
+react/node_modules 
+react/build
+react/dist
+react/.env
