--- a/manifest.json
+++ b/manifest.json
@@ -1,9 +1,10 @@
 {
-  "vendor": "vtex",
-  "name": "minimumtheme",
+  "vendor": "qastudiof",
+  "name": "store-theme",
   "version": "0.1.2",
   "builders": {
     "styles": "2.x",
+    "react": "3.x",
     "store": "0.x",
     "docs": "0.x"
   },
@@ -44,7 +45,11 @@
     "vtex.iframe": "0.x",
     "vtex.breadcrumb": "1.x",
     "vtex.sticky-layout": "0.x",
-    "vtex.add-to-cart-button": "0.x"
+    "vtex.add-to-cart-button": "0.x",
+    "vtex.render-runtime": "8.x",
+    "vtex.css-handles": "1.x",
+    "vtex.product-context": "0.x",
+    "vtex.order-manager": "0.x"
   },
   "$schema": "https://raw.githubusercontent.com/vtex/node-vtex-api/master/gen/manifest.schema"
 }
